--- a/Crawl/Crawl.iOS/Crawl.iOS.csproj
+++ b/Crawl/Crawl.iOS/Crawl.iOS.csproj
@@ -129,6 +129,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
     </PackageReference>
+    <PackageReference Include="NUnit">
+      <Version>3.11.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
