--- a/Crawl/Crawl.UWP/Crawl.UWP.csproj
+++ b/Crawl/Crawl.UWP/Crawl.UWP.csproj
@@ -161,13 +161,16 @@
     <PackageReference Include="NUnit">
       <Version>3.11.0</Version>
     </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.13.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
   </ItemGroup>
   <Import Project="..\Crawl\Crawl.projitems" Label="Shared" />
