--- a/Crawl/Crawl.iOS/Crawl.iOS.csproj
+++ b/Crawl/Crawl.iOS/Crawl.iOS.csproj
@@ -132,6 +132,9 @@
     <PackageReference Include="NUnit">
       <Version>3.11.0</Version>
     </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.13.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
