--- a/Crawl/Crawl.Android/Crawl.Android.csproj
+++ b/Crawl/Crawl.Android/Crawl.Android.csproj
@@ -77,6 +77,9 @@
     <PackageReference Include="Xamarin.Forms.Theme.Dark">
       <Version>1.0.0.43-pre1</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileHelper.cs" />
@@ -121,6 +124,13 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Meowing-cat.mp3" />
+    <AndroidAsset Include="Assets\Clock-sound-tick-tock.mp3" />
+    <AndroidAsset Include="Assets\Mcdonald-melody-toy.mp3" />
+    <AndroidAsset Include="Assets\Loud-gunshot-sound.mp3" />
+    <AndroidAsset Include="Assets\Dun-dun-duuuuun.mp3" />
   </ItemGroup>
   <Import Project="..\Crawl\Crawl.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
